manifiesto/objects/Proyecto_Innovacion__c.object
<CustomObject>
    <fields>
        <fullName>Codigo_del_Proyecto__c</fullName>
        <label>Codigo del Proyecto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proyectos + Innovación</relationshipLabel>
        <relationshipName>Proyectos_Innovaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>División</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sociedad__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Químicos y Especialidades</fullName>
                </value>
                <value>
                    <fullName>Resinas</fullName>
                </value>
                <value>
                    <fullName>DILOX</fullName>
                </value>
                <value>
                    <fullName>Terminales Marítimos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Encargado_del_proyecto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Encargado del proyecto</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proyectos_Innovaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Etapa__c</fullName>
        <label>Etapa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactivo</fullName>
                </value>
                <value>
                    <fullName>Activo</fullName>
                </value>
                <value>
                    <fullName>Planificación</fullName>
                </value>
                <value>
                    <fullName>Investigación</fullName>
                </value>
                <value>
                    <fullName>Completo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fase_del_proyecto__c</fullName>
        <label>Fase del proyecto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En progreso</fullName>
                </value>
                <value>
                    <fullName>Completo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proyectos + Innovación</relationshipLabel>
        <relationshipName>Proyectos_Innovaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recursos_clave__c</fullName>
        <label>Recursos clave</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resumen_del_proyecto__c</fullName>
        <label>Resumen del proyecto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Roles_del_Proyecto__c</fullName>
        <label>Roles del Proyecto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sociedad__c</fullName>
        <label>Sociedad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oxiquim</fullName>
                </value>
                <value>
                    <fullName>Dilox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unidad_de_negocio__c</fullName>
        <label>Unidad de negocios</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Químicos</fullName>
                </value>
                <value>
                    <fullName>Minería</fullName>
                </value>
                <value>
                    <fullName>Plásticos</fullName>
                </value>
                <value>
                    <fullName>Escuadrón</fullName>
                </value>
                <value>
                    <fullName>Quintero</fullName>
                </value>
                <value>
                    <fullName>Resinas</fullName>
                </value>
                <value>
                    <fullName>Mejillones</fullName>
                </value>
                <value>
                    <fullName>Dilox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valorizacion_del_Proyecto__c</fullName>
        <label>Valorización del Proyecto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Proyecto + Innovación</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Descripcion__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Proyecto + Innovación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos + Innovación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>